# Scaler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  custom_gdb_extensions.py  mylinker.ld  out.txt  pseudoPlt.cpp  redzoneJumper.cpp  testHandler.cpp  testPseudoPlt.cpp
Analyzer/ScalerRun/: CMakeLists.txt  config.yml.demo
Analyzer/ScalerRun/src/: HookConfig.cpp  InfoServiceGrpc.cpp  injector.cpp  resource.cpp
Analyzer/ScalerRun/src/include/: config
libHook/: CMakeLists.txt
libHook-c/: CMakeLists.txt
libHook-c/src/: AddrFileIdMapping.cpp  Breakpoint.cpp  DLProxy.cpp  DataSaver.cpp  ELFImgInfo.cpp  ElfParser.cpp  ExtFuncCallHook.cpp  ExtFuncCallHookBrkpoint.cpp  ExtSymInfo.cpp  FileTool.cpp  HookContext.cpp  HookHandlers.cpp  HookHandlersBrkpoint.cpp  InvocationTree.cpp  LibcProxy.cpp  LogicalClock.cpp  MemTool.cpp  ProcInfoParser.cpp  PthreadProxy.cpp  StringTool.cpp  SystemProxy.cpp  VMEmulator.cpp  Visualizer.cpp  assemblyTemplate.cpp  libcProxy.cpp  pthreadProxy.cpp  systemProxy.cpp
libHook-c/src/include/exceptions/: ScalerException.h
libHook-c/src/include/type/: Breakpoint.h  ELFImgInfo.h  ELFSecInfo.h  ExtSymInfo.h  InvocationTree.h  RecTuple.h
libHook-c/src/include/util/: Hook.h
libHook-c/src/include/visualizer/: ReportStruct.h
libHook-c/tests/: CMakeLists.txt
libHook-c/tests/gdbscripts/: custom_gdb_extensions.py  gdb_skip_nonbreakpoint_trap.py
libHook-c/tests/lib/FunctionCall/: FuncWithDiffParms.cpp  TenThousandFunc.cpp
libHook-c/tests/src/demoapps/: TestBinaryAccess.cpp  TestExceptions.cpp  TestFork.cpp  TestFuncCall.cpp  TestFuncCallDelay.cpp  TestJump.cpp  TestPthread.cpp  TestSemaphore.cpp  TestSimpleFuncCall.cpp  TestThreadInterleave.cpp  TestThreadJoin.cpp  TestThreadSimultaenouslyEnd.cpp  TestTimingAccuracy.cpp  TimingAccuracyResultsAnalysis.py
libHook-c/tests/src/proofconcept/: CMakeLists.txt  DLInterceptor.cpp  DLInterceptor.h  DlGrabber.cpp  DlGrabber.h  TestDL.cpp  TestDifferentTypesOfSymbol.cpp  TestDifferentTypesOfSymbolLib.cpp  TestDifferentTypesOfSymbolLib.h  TestHookEverything.cpp  binarySegmentSearch.py  getUserTime.cpp  libtest.cpp  make100Functions.py  testExtFuncInvocation.cpp  testFindSection.cpp  testJmpHandlerInlineHook.cpp  testParsingAddr2Relative.cpp
libHook-c/tests/src/unittests/: TestELFParser.cpp  TestException.cpp  TestExtFuncCallHook.cpp  TestInvocationTree.cpp  TestLog.cpp  TestMemTool.cpp  TestMemoryHeapArray.cpp  TestMemoryHeapList.cpp  TestPMParser.cpp  TestProtobuf.cpp
libHook-c/tests/src/verification/: TestThreadInterleave.cpp  libWorkload.cpp
libHook/docker/ubuntu1804/: Dockerfile  docker-compose.yml
libHook/lib/: CMakeCache.txt
libHook/lib/watcher/include/: backtrack.hh  hashmap.hh  instbuffer.h  internalheap.hh  log.hh  perthread_decoder.h  pt_manager.h  rca_tool.hh  selfmap.hh  semaphore.hh  software_breakpoint.h  syscalls.hh  sysrecord.hh  threadinfo.hh  threadstruct.hh  vm_emulator.h  watchpoint.hh  xglobals.hh  xmapping.hh  xmemory.hh  xoneheap.hh  xrun.hh  xthread.hh
libHook/lib/watcher/src/: instbuffer.cpp  libwatcher.cpp  pt_manager.cpp  quarantine.cpp  rca_tool.cpp  recordentries.cpp  xmemory.cpp  xrun.cpp
libHook/src/: ChannelPool.cpp  Config.cpp  ConfigServiceGrpc.cpp  ElfParser.cpp  ExtFuncCallHook.cpp  ExtFuncCallHookAsm.cpp  ExtFuncCallHookBrkpoint.cpp  ExtFuncCallHookPtrace.cpp  HookConfig.cpp  InfoServiceGprc.cpp  InfoServiceGrpc.cpp  InvocationTree.cpp  InvocationTreeV1.cpp  InvocationTreeV2.cpp  JobServiceGrpc.cpp  MemTool_Linux.cpp  MemoryHeap.cpp  ProcInfoParser.cpp  PtraceHookMain.cpp  ScalerException.cpp  Serilizable.cpp  Timer.cpp  VMEmulator.cpp  autoinstall.cpp  breakpoint.cpp  injector.cpp
libHook/src/include/config/: HookConfig.h
libHook/src/include/gprc/: InfoServiceGprc.h  InfoServiceGrpc.h
libHook/src/include/grpc/: ChannelPool.h  ConfigServiceGrpc.h  InfoServiceGrpc.h  JobServiceGrpc.h
libHook/src/include/type/: InvocationTree.h  InvocationTreeV1.h  InvocationTreeV2.h  Object.hpp  breakpoint.h
libHook/tests/: CMakeLists.txt
libHook/tests/src/demoapps/: TestFuncCall.cpp  TestFuncCallDelay.cpp  TestInstall.cpp  TestNestedFuncCallPthread.cpp  TestPthread.cpp  TestSameFuncDiffLib.cpp  TestSingalHandler.cpp
libHook/tests/src/proofconcept/: ObserveStack.cpp  TestAccessThreadLocalArrayInAsm.cpp  TestLtrace.cpp  TestStackOverflow.cpp  testFindRdebug.cpp  testLocatingPLT.cpp  testManualBreakpoint.cpp  testPtraceReadProcMemory.cpp  (+2 more)
libScalerHook/: CMakeLists.txt
libScalerHook/lib/inireader/: INIReader.h
libScalerHook/lib/watcher/: CMakeLists.txt
libScalerHook/src/: Config.cpp  ElfParser.cpp  ExtFuncCallHook.cpp  ExtFuncCallHookAsm.cpp  ExtFuncCallHookBrkpoint.cpp  ExtFuncCallHookPtrace.cpp  ExtFuncCallHook_Linux.cpp  FileTool.cpp  InvocationTree.cpp  MemTool.cpp  MemToolPtrace.cpp  MemTool_Linux.cpp  PMParser.cpp  ProcInfoParser.cpp  ProcInfoPaser.cpp  PtraceHookMain.cpp  Serilizable.cpp  StringTool.cpp  Timer.cpp  VMEmulator.cpp  autoinstall.cpp  breakpoint.cpp  injector.cpp  install.cpp  testHandler.cpp  testPseudoPlt.cpp  timer.cpp
libScalerHook/tests/: CMakeLists.txt
libScalerHook/tests/gdbscripts/: custom_gdb_extensions.py  custom_gdb_extensions_withouthandler.py  gdb_record_func.py  gdb_skip_nonbreakpoint_trap.py
libScalerHook/tests/src/: CMakeLists.txt  TestPMParser.cpp
proto/: CMakeLists.txt  findThisGrpc.cmake
proto/lib/grpc_1_43_0/: ReadMe.md
proto/lib/modules/: FindProtobuf.cmake  FindgRPC.cmake
proto/src/analyzerserver/: BinaryExecResult.proto  ConfigService.proto  InfoService.proto  JobService.proto  ProfilingData.proto
proto/src/tests/: MyService.proto
protobuffer/: CMakeLists.txt
protobuffer/src/analyzerserver/: InfoService.proto
protobuffer/src/tests/: addressbook.proto
tests/: CMakeLists.txt  TestELFParser.cpp  TestException.cpp  TestExtFuncCallHook.cpp  TestFileTool.cpp  TestFuncCall.cpp  TestInstall.cpp  TestPMParser.cpp
tests/NaiveFuncCallApp/: main.cpp
tests/libInstalltest/src/: installTest.cpp
tests/libtest/header/: FuncWithDiffParms.h
tests/libtest/src/: FuncWithDiffParms.cpp  installTest.cpp
(+520 files in other folders)
